[package]
name = "token_deployer"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["the-first-elder <emmanuelmayowa95@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.2"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
